Test fix for x-overflow bar (Fixes #133)

--- a/styles/components/_container.scss
+++ b/styles/components/_container.scss
@@ -14,7 +14,7 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
-  overflow: scroll;
+  overflow: auto;
   .container {
     padding: 1rem 1rem 0 1rem;
     @media (max-width: 480px) {
