--- a/styles/components/_poem.scss
+++ b/styles/components/_poem.scss
@@ -350,6 +350,7 @@
   &[data-poem-slug='three-iv'] {
     @include indent.spacing(6, 0.145rem, 0.14rem);
     @include indent.spacing(15, 0.17rem, 0.15rem);
+  }
   &[data-poem-slug='four-xi'] {
     @include indent.spacing(7, 0.145rem, 0.14rem);
     @include indent.spacing(18, 0.145rem, 0.14rem);
