--- a/styles/components/_poem.scss
+++ b/styles/components/_poem.scss
@@ -347,6 +347,9 @@
       padding: 0;
     }
   }
+  &[data-poem-slug='one-xxii'] {
+    @include indent.spacing(24, 0.17rem, 0.165rem);
+  }
   &[data-poem-slug='five-ii'] {
     @include indent.spacing(8, 0.14rem, 0.13rem);
   }
