--- a/styles/components/_poem.scss
+++ b/styles/components/_poem.scss
@@ -354,6 +354,9 @@
     @include indent.spacing(6, 0.145rem, 0.14rem);
     @include indent.spacing(15, 0.17rem, 0.15rem);
   }
+  &[data-poem-slug='three-vi'] {
+    @include indent.spacing(31, 0.12rem, 0.11rem);
+  }
   &[data-poem-slug='four-iii'] {
     @include indent.spacing(14, 0.145rem, 0.14rem);
     @include indent.spacing(16, 0.18rem, 0.175rem);
