--- a/styles/components/_poem.scss
+++ b/styles/components/_poem.scss
@@ -350,6 +350,13 @@
   &[data-poem-slug='one-xxii'] {
     @include indent.spacing(24, 0.17rem, 0.165rem);
   }
+  &[data-poem-slug='one-xxxviii'] {
+    .stanza .line {
+      text-indent: 1em;
+      padding-left: 0;
+      max-width: 850px;
+    }
+  }
   &[data-poem-slug='three-iv'] {
     @include indent.spacing(6, 0.145rem, 0.14rem);
     @include indent.spacing(15, 0.17rem, 0.15rem);
